--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .DS_Store
 node_modules
 /dist
-
+babel.config.js
+vue.config.js
 
 # local env files
 .env.local
@@ -14,10 +15,12 @@ yarn-error.log*
 pnpm-debug.log*
 
 # Editor directories and files
+.editorconfig
 .idea
 .vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
+*.json
 *.sw?
